--- a/media.html
+++ b/media.html
@@ -177,11 +177,11 @@
 
   <div class="container">
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Music')">Music</button>
-        <button class="tablinks" onclick="openTab(event, 'TV')">TV</button>
-        <button class="tablinks" onclick="openTab(event, 'Movies')">Movies</button>
-        <button class="tablinks" onclick="openTab(event, 'Games')">Games</button>
-        <button class="tablinks" onclick="openTab(event, 'Books')">Books</button>
+        <button class="tablinks" onclick="location.href='#Music'">Music</button>
+        <button class="tablinks" onclick="location.href='#TV'">TV</button>
+        <button class="tablinks" onclick="location.href='#Movies'">Movies</button>
+        <button class="tablinks" onclick="location.href='#Games'">Games</button>
+        <button class="tablinks" onclick="location.href='#Books'">Books</button>
     </div>
 
     <!-- Title -->
