--- a/media.html
+++ b/media.html
@@ -101,7 +101,7 @@
         /* Style the buttons inside the tab */
         .tab button {
             display: block;
-            background-color: #f1f1f1;
+            background-color: transparent; /* Removed background color */
             border: none;
             outline: none;
             cursor: pointer;
@@ -136,7 +136,6 @@
             right: 0; /* Align to the right side */
             top: 0;
             bottom: 0;
-            background-color: #f1f1f1;
             padding-top: 60px; /* Adjust according to your navbar height */
             width: 200px;
             overflow-y: auto;
