--- a/media.html
+++ b/media.html
@@ -134,8 +134,8 @@
         .side-navbar {
             position: fixed;
             right: 0; /* Align to the right side */
-            top: 0;
-            bottom: 0;
+            top: 50%; /* Center vertically */
+            transform: translateY(-50%); /* Adjust to center */
             padding-top: 60px; /* Adjust according to your navbar height */
             width: 200px;
             overflow-y: auto;
