--- a/media.html
+++ b/media.html
@@ -109,7 +109,6 @@
             transition: 0.3s;
             font-size: 16px;
             margin-bottom: 5px;
-            width: 200px;
             text-align: left;
             border-radius: 20px; /* Rounded corners */
         }
@@ -137,7 +136,7 @@
             top: 50%; /* Center vertically */
             transform: translateY(-50%); /* Adjust to center */
             padding-top: 60px; /* Adjust according to your navbar height */
-            width: 200px;
+            width: auto; /* Adjust width dynamically */
             overflow-y: auto;
         }
 
